[package]
name = "nodders"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json  = "1.0"
inputbot = { git = "https://github.com/obv-mikhail/InputBot" }

[features]
default = ["persistence"]
persistence = ["eframe/persistence"]

[profile.release]
opt-level = 2
